--- a/src/Orchard.Web/Themes/Corporate/Styles/site.css
+++ b/src/Orchard.Web/Themes/Corporate/Styles/site.css
@@ -425,6 +425,7 @@ html, body {background-color: #FFFFFF; background-image: url(../Content/Images/b
 
 .content-localization .content-localizations ul {
     overflow: auto;
+    list-style-type:none;
 }
 
 
